--- a/dateview.html
+++ b/dateview.html
@@ -293,6 +293,56 @@
   .detail-section{margin-bottom:24px}
   .section-title{font-size:calc(1rem * var(--modal-font-scale));font-weight:600;color:var(--brand);margin-bottom:12px;padding-bottom:8px;border-bottom:2px solid var(--border)}
   .detail-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:16px}
+
+  /* ===== 詳細モーダル 上段グリッド改善 ===== */
+
+.detail-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);  /* 3列均等配置 */
+  gap: 22px 32px;                          /* 行22px / 列32px */
+  padding: 8px 4px;                        /* 上下左右の余白調整 */
+}
+
+.detail-item label {
+  font-size: 1.05rem;                      /* 見出しを大きく */
+  font-weight: 600;
+  color: #334155;
+  margin-bottom: 4px;
+  display: block;
+}
+
+.detail-item .value{
+  font-size: 1.25rem;                      /* ★値を大きくした */
+  font-weight: 600;
+  color: #0f172a;
+  line-height: 1.5;
+}
+/* ===== 詳細モーダル：基本情報（ラベル＋値）を大きく見やすく ===== */
+
+.detail-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /* 3列 */
+  gap: 24px 40px;  /* 行間24px / 列間40px */
+  padding: 10px 2px;
+}
+
+/* 見出し（部署 / ライン / 発生日 など） */
+.detail-item label {
+  font-size: 1.15rem;       /* ★大きめ見出し */
+  font-weight: 700;
+  color: #334155;
+  margin-bottom: 6px;
+  display: block;
+}
+
+/* 値（1G / RL-1 / 2025-11-19 など） */
+.detail-item .value {
+  font-size: 1.55rem;        /* ★整理No に近づける（超重要） */
+  font-weight: 700;
+  color: #0f172a;
+  line-height: 1.6;
+}
+
   .detail-item{display:flex;flex-direction:column;gap:4px}
   .detail-label{font-size:calc(.85rem * var(--modal-font-scale));color:var(--muted);font-weight:500}
   .detail-value{font-size:calc(1rem * var(--modal-font-scale));color:var(--ink);font-weight:500}
