--- a/dateview.html
+++ b/dateview.html
@@ -283,7 +283,16 @@
   /* 詳細モーダル */
   .modal{display:none;position:fixed;inset:0;background:var(--backdrop);z-index:5000;align-items:center;justify-content:center}
   .modal.active{display:flex}
-  .modal-content{background:var(--card);border-radius:16px;max-width:900px;width:95%;max-height:90vh;overflow-y:auto;box-shadow:0 20px 60px rgba(0,0,0,.3);border:1px solid var(--border)}
+    .modal-content{
+    background:var(--card);
+    border-radius:16px;
+    max-width:1100px;   /* ★ 900px → 1100px くらいに拡大 */
+    width:96%;
+    max-height:90vh;
+    overflow-y:auto;
+    box-shadow:0 20px 60px rgba(0,0,0,.3);
+    border:1px solid var(--border);
+  }
   .modal-header{padding:24px;border-bottom:1px solid var(--border);display:flex;justify-content:space-between;align-items:center;position:sticky;top:0;background:var(--card);z-index:10;gap:12px}
   .modal-title{font-size:calc(1.3rem * var(--modal-font-scale));font-weight:600;color:var(--brand);display:flex;align-items:center;flex-wrap:wrap;gap:10px}
   .modal-title .sn{font-size:calc(1.6rem * var(--modal-font-scale));font-weight:800;letter-spacing:.02em;color:var(--ink)}
@@ -293,6 +302,52 @@
   .detail-section{margin-bottom:24px}
   .section-title{font-size:calc(1rem * var(--modal-font-scale));font-weight:600;color:var(--brand);margin-bottom:12px;padding-bottom:8px;border-bottom:2px solid var(--border)}
   .detail-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:16px}
+  /* ==== 詳細モーダル：左右2カラムレイアウト ==== */
+
+  .modal-body-layout{
+    display:grid;
+    grid-template-columns: minmax(0, 2fr) minmax(0, 1.3fr); /* 左:右 = 2:1.3 くらい */
+    gap:20px;
+    align-items:flex-start;
+  }
+
+  .modal-col-left,
+  .modal-col-right{
+    min-width:0;
+  }
+
+  /* 右カラムに軽く仕切り線 */
+  .modal-col-right{
+    border-left:1px solid var(--border);
+    padding-left:16px;
+  }
+
+  /* 写真パネル内のタイトルなど調整 */
+  .photo-panel-title{
+    font-size:0.95rem;
+    font-weight:600;
+    color:var(--muted);
+    margin-bottom:6px;
+  }
+
+  .photo-panel-note{
+    margin-top:6px;
+    font-size:.85rem;
+    color:var(--muted);
+    line-height:1.5;
+  }
+
+  @media (max-width: 900px){
+    .modal-body-layout{
+      grid-template-columns: 1fr;   /* スマホでは縦積み */
+    }
+    .modal-col-right{
+      border-left:none;
+      padding-left:0;
+      border-top:1px solid var(--border);
+      padding-top:12px;
+    }
+  }
 
   /* ===== 詳細モーダル 上段グリッド改善 ===== */
 
@@ -661,6 +716,35 @@ if (typeof window.ensureCanvasResolution !== 'function') {
     if (canvas.height !== needH) canvas.height = needH;
   };
 }
+  // === 製品写真（整理No → UNCパス → file:// URL） ===
+  const PRODUCT_BASE_UNC   = "\\\\Fs1\\d70工務\\★情報\\生産計画Ｇ\\かんばん\\QRかんばん\\製品写真";
+  const PRODUCT_DEFAULT_EXT = ".jpg";
+
+  function productEnsureExt(name){
+    return (/\.[A-Za-z0-9]+$/.test(name)) ? name : (name + PRODUCT_DEFAULT_EXT);
+  }
+
+  function productToFileURLFromUNC(unc){
+    // UNC: \\Server\share\path\file.jpg → file://///Server/share/path/file.jpg
+    const noLead = unc.replace(/^\\\\/, "");
+    const parts  = noLead.split("\\").map(s => encodeURIComponent(s));
+    return "file://///" + parts.join("/");
+  }
+
+  // ★ 整理No から製品写真URLを生成
+function getProductPhotoUrl(serialNoRaw){
+  const normalized = normalizeSerial(serialNoRaw ?? '');
+  if (!normalized) return null;
+
+  const fname = productEnsureExt(normalized);
+  const unc   = PRODUCT_BASE_UNC + "\\" + fname;
+  const url   = productToFileURLFromUNC(unc);
+
+  console.log("[product-photo]", {serialNoRaw, normalized, fname, unc, url});
+  return url;
+}
+
+
 
   import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.4/firebase-app.js';
   import { getAuth, signInWithEmailAndPassword, onAuthStateChanged, setPersistence, browserLocalPersistence } from 'https://www.gstatic.com/firebasejs/10.12.4/firebase-auth.js';
@@ -764,7 +848,20 @@ const DEFAULT_COLUMNS = [
     else date.setDate(date.getDate()-1);
     return formatDate(date);
   }
-  function normalizeWide(s){return String(s??'').replace(/[Ａ-Ｚａ-ｚ０-９]/g,ch=>String.fromCharCode(ch.charCodeAt(0)-0xFEE0)).replace(/　/g,' ').trim();}
+// ★ 全角 → 半角 変換
+function normalizeWide(s){
+  return String(s ?? '')
+    .replace(/[Ａ-Ｚａ-ｚ０-９]/g, ch => String.fromCharCode(ch.charCodeAt(0) - 0xFEE0))
+    .replace(/　/g, ' ')
+    .trim();
+}
+
+// ★ 整理No 用（スペース除去）
+function normalizeSerial(s){
+  return normalizeWide(s).replace(/\s+/g, '');
+}
+
+  
   function normalizeDeptName(s){return normalizeWide(s).toUpperCase()||'未設定';}
   function normalizeLineName(s){return normalizeWide(s)||'未設定';}
 
@@ -1893,60 +1990,191 @@ function reorderColumns(fromId, toId){
   }
 
   /* ===== 詳細・写真 ===== */
+  /* ===== 詳細・写真（横長レイアウト） ===== */
   function showDetail(id){
-    const item=allData.find(x=>x._id===id); if(!item) return;
+    const item = allData.find(x => x._id === id);
+    if (!item) return;
 
-    const sm = (typeof item.stopMinutes==='number') ? item.stopMinutes : null;
-    let stopBadgeCls='badge-muted', stopBadgeLbl='停止時間: -';
-    if (sm!=null){
-      if (sm >= 60){ stopBadgeCls='badge-danger'; stopBadgeLbl=`停止時間: ${sm}分`; }
-      else if (sm >= 15){ stopBadgeCls='badge-warn'; stopBadgeLbl=`停止時間: ${sm}分`; }
-      else if (sm > 0){ stopBadgeCls='badge-good'; stopBadgeLbl=`停止時間: ${sm}分`; }
-      else { stopBadgeCls='badge-muted'; stopBadgeLbl='停止時間: 0分'; }
+    // 整理No（raw / 表示用）
+    const snTextRaw = item.serialNo || item.serial || item.seiriNo || '';
+    const snText    = snTextRaw || '-';
+    const productUrl = getProductPhotoUrl(snTextRaw);
+
+    // 停止時間バッジ
+    const sm = (typeof item.stopMinutes === 'number') ? item.stopMinutes : null;
+    let stopBadgeCls = 'badge-muted';
+    let stopBadgeLbl = '停止時間: -';
+    if (sm != null) {
+      if (sm >= 60)      { stopBadgeCls = 'badge-danger'; stopBadgeLbl = `停止時間: ${sm}分`; }
+      else if (sm >= 15){ stopBadgeCls = 'badge-warn';   stopBadgeLbl = `停止時間: ${sm}分`; }
+      else if (sm > 0)  { stopBadgeCls = 'badge-good';   stopBadgeLbl = `停止時間: ${sm}分`; }
+      else              { stopBadgeCls = 'badge-muted';  stopBadgeLbl = '停止時間: 0分'; }
     }
 
+    // 新規 / 再発
     const recRaw = (item.recurrenceType ?? item.recurrence ?? (item.isRepeat ? '再発' : '新規')) || null;
-    const isRepeat = typeof recRaw==='string' ? /再発|repeat/i.test(recRaw) : !!recRaw;
+    const isRepeat    = (typeof recRaw === 'string') ? /再発|repeat/i.test(recRaw) : !!recRaw;
     const recBadgeCls = isRepeat ? 'badge-danger' : 'badge-info';
     const recBadgeLbl = isRepeat ? '再発' : '新規';
 
-    const modal=document.getElementById('detailModal');
-    const title=document.getElementById('detailTitle');
-    const body =document.getElementById('detailBody');
+    const modal = document.getElementById('detailModal');
+    const title = document.getElementById('detailTitle');
+    const body  = document.getElementById('detailBody');
 
-    const snText = item.serialNo || '-';
+    // タイトル（上部）
     title.innerHTML = `
       <span class="sn">整理No: ${snText}</span>
       <span class="badge ${stopBadgeCls}"><span class="dot"></span>${stopBadgeLbl}</span>
       <span class="badge ${recBadgeCls}"><span class="dot"></span>${recBadgeLbl}</span>
     `;
 
-    const mfg=item.mfgPhotoUrls||[], tech=item.techPhotoUrls||[];
-    body.innerHTML=`
-      <div class="detail-section"><div class="section-title">📋 基本情報</div>
-        <div class="detail-grid">
-          <div class="detail-item"><div class="detail-label">部署</div><div class="detail-value">${item.department||'-'}</div></div>
-          <div class="detail-item"><div class="detail-label">ライン</div><div class="detail-value">${item.lineName||'-'}</div></div>
-          <div class="detail-item"><div class="detail-label">発生日</div><div class="detail-value">${item.occurrenceDateISO || item.createdAtISO || '-'}</div></div>
-          <div class="detail-item"><div class="detail-label">発生時刻</div><div class="detail-value">${item.occurrenceTimeNorm||'-'}</div></div>
-          <div class="detail-item"><div class="detail-label">再開時刻</div><div class="detail-value">${item.restartTimeNorm||'-'}</div></div>
-          <div class="detail-item"><div class="detail-label">処置者</div><div class="detail-value">${item.handler||'-'}</div></div>
-          <div class="detail-item"><div class="detail-label">状態</div><div class="detail-value">
-            <span class="status-badge ${item.status==='complete'?'status-complete':'status-pending'}">${item.status==='complete'?'完了':'技術入力待ち'}</span>
-          </div></div>
+    const mfg  = item.mfgPhotoUrls  || [];
+    const tech = item.techPhotoUrls || [];
+
+    // 右カラム：製品写真セクション
+    let productSection = '';
+    if (snTextRaw) {
+      if (productUrl) {
+        productSection = `
+          <div class="detail-section">
+            <div class="section-title">🏷️ 製品写真（整理No連動）</div>
+            <div class="photo-grid">
+              <div class="photo-thumbnail" onclick="window.open('${productUrl}', '_blank')">
+                <img src="${productUrl}" alt="製品写真（整理No: ${snText})">
+              </div>
+            </div>
+
+          </div>
+        `;
+      } else {
+        productSection = `
+          <div class="detail-section">
+            <div class="section-title">🏷️ 製品写真（整理No連動）</div>
+            <p class="photo-panel-note">
+              整理No <b>${snText}</b> に紐づく製品写真が見つかりませんでした。<br>
+              ネットワークドライブの「製品写真」フォルダに
+              <b>${snText}.jpg</b> が存在するか確認してください。
+            </p>
+          </div>
+        `;
+      }
+    } else {
+      productSection = `
+        <div class="detail-section">
+          <div class="section-title">🏷️ 製品写真（整理No連動）</div>
+          <p class="photo-panel-note">
+            整理Noが未設定のため、製品写真を自動表示できません。
+          </p>
+        </div>
+      `;
+    }
+
+    // 右カラム：現場写真（発信部署）
+    let mfgSection = '';
+    if (mfg.length) {
+      mfgSection = `
+        <div class="detail-section">
+          <div class="section-title">📷 発信部署の写真（${mfg.length}枚）</div>
+          <div class="photo-grid">
+            ${mfg.map(u => `
+              <div class="photo-thumbnail" onclick="window.open('${u}', '_blank')">
+                <img src="${u}" alt="">
+              </div>
+            `).join('')}
+          </div>
+        </div>
+      `;
+    }
+
+    // 右カラム：技術部門写真
+    let techSection = '';
+    if (tech.length) {
+      techSection = `
+        <div class="detail-section">
+          <div class="section-title">🔧 技術部門の写真（${tech.length}枚）</div>
+          <div class="photo-grid">
+            ${tech.map(u => `
+              <div class="photo-thumbnail" onclick="window.open('${u}', '_blank')">
+                <img src="${u}" alt="">
+              </div>
+            `).join('')}
+          </div>
+        </div>
+      `;
+    }
+
+    // 本文：左右2カラムレイアウトで描画
+    body.innerHTML = `
+      <div class="modal-body-layout">
+        <!-- 左カラム：テキスト情報 -->
+        <div class="modal-col-left">
+          <div class="detail-section">
+            <div class="section-title">📋 基本情報</div>
+            <div class="detail-grid">
+              <div class="detail-item">
+                <div class="detail-label">部署</div>
+                <div class="detail-value">${item.department || '-'}</div>
+              </div>
+              <div class="detail-item">
+                <div class="detail-label">ライン</div>
+                <div class="detail-value">${item.lineName || '-'}</div>
+              </div>
+              <div class="detail-item">
+                <div class="detail-label">発生日</div>
+                <div class="detail-value">${item.occurrenceDateISO || item.createdAtISO || '-'}</div>
+              </div>
+              <div class="detail-item">
+                <div class="detail-label">発生時刻</div>
+                <div class="detail-value">${item.occurrenceTimeNorm || '-'}</div>
+              </div>
+              <div class="detail-item">
+                <div class="detail-label">再開時刻</div>
+                <div class="detail-value">${item.restartTimeNorm || '-'}</div>
+              </div>
+              <div class="detail-item">
+                <div class="detail-label">処置者</div>
+                <div class="detail-value">${item.handler || '-'}</div>
+              </div>
+              <div class="detail-item">
+                <div class="detail-label">状態</div>
+                <div class="detail-value">
+                  <span class="status-badge ${item.status === 'complete' ? 'status-complete' : 'status-pending'}">
+                    ${item.status === 'complete' ? '完了' : '技術入力待ち'}
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="detail-section">
+            <div class="section-title">🚨 異常内容</div>
+            <div class="detail-text-area">${item.anomalyContent || '-'}</div>
+          </div>
+
+          <div class="detail-section">
+            <div class="section-title">🔧 対応内容</div>
+            <div class="detail-text-area">${item.actionTaken || '-'}</div>
+          </div>
+
+          <div class="detail-section">
+            <div class="section-title">🛠️ 処置内容</div>
+            <div class="detail-text-area">${item.rootCauseAction || '-'}</div>
+          </div>
+        </div>
+
+        <!-- 右カラム：写真パネル一式 -->
+        <div class="modal-col-right">
+          ${productSection}
+          ${mfgSection}
+          ${techSection}
         </div>
       </div>
-      <div class="detail-section"><div class="section-title">🚨 異常内容</div><div class="detail-text-area">${item.anomalyContent||'-'}</div></div>
-      <div class="detail-section"><div class="section-title">🔧 対応内容</div><div class="detail-text-area">${item.actionTaken||'-'}</div></div>
-           <div class="detail-section">
-       <div class="section-title">🛠️ 処置内容</div>
-       <div class="detail-text-area">${item.rootCauseAction || '-'}</div>
-     </div>
-      ${mfg.length?`<div class="detail-section"><div class="section-title">📷 発信部署の写真（${mfg.length}枚）</div><div class="photo-grid">${mfg.map(u=>`<div class="photo-thumbnail" onclick="window.open('${u}','_blank')"><img src="${u}" alt=""></div>`).join('')}</div></div>`:''}
-      ${tech.length?`<div class="detail-section"><div class="section-title">🔧 技術部門の写真（${tech.length}枚）</div><div class="photo-grid">${tech.map(u=>`<div class="photo-thumbnail" onclick="window.open('${u}','_blank')"><img src="${u}" alt=""></div>`).join('')}</div></div>`:''}
     `;
+
     modal.classList.add('active');
   }
+
+
 
   /* ===== 表示項目＆サイズ設定 ===== */
   function loadSettings(){
