--- a/dateview.html
+++ b/dateview.html
@@ -286,7 +286,7 @@
     .modal-content{
     background:var(--card);
     border-radius:16px;
-    max-width:1100px;   /* ★ 900px → 1100px くらいに拡大 */
+    max-width:1250px;   /* ★ 900px → 1100px くらいに拡大 */
     width:96%;
     max-height:90vh;
     overflow-y:auto;
@@ -295,7 +295,7 @@
   }
   .modal-header{padding:24px;border-bottom:1px solid var(--border);display:flex;justify-content:space-between;align-items:center;position:sticky;top:0;background:var(--card);z-index:10;gap:12px}
   .modal-title{font-size:calc(1.3rem * var(--modal-font-scale));font-weight:600;color:var(--brand);display:flex;align-items:center;flex-wrap:wrap;gap:10px}
-  .modal-title .sn{font-size:calc(1.6rem * var(--modal-font-scale));font-weight:800;letter-spacing:.02em;color:var(--ink)}
+  .modal-title .sn{font-size:calc(2.8rem * var(--modal-font-scale));font-weight:800;letter-spacing:.02em;color:var(--ink)}
   .btn-close{background:rgba(148,163,184,.18);border:1px solid var(--border);width:32px;height:32px;border-radius:50%;cursor:pointer;font-size:1.2rem;color:var(--ink);transition:.2s}
   .btn-close:hover{background:rgba(148,163,184,.28)}
   .modal-body{padding:24px;font-size:calc(1rem * var(--modal-font-scale));color:var(--ink)}
@@ -507,6 +507,86 @@ body.fullscreen-active {
 /* 全画面モードのときだけ表示 */
 .datasheet-container.fullscreen .fullscreen-dept-filter {
   display: flex;
+}
+/* ==== タイトル行のライン名 ==== */
+.line-name{
+  font-size:1.4rem;
+  font-weight:600;
+  color:#4b5563;
+  margin-left:8px;
+}
+
+/* ==== バッジ大型化 ==== */
+.badge-lg{
+  font-size:1.05rem !important;
+  padding:8px 14px !important;
+  border-radius:12px !important;
+  margin-left:10px !important;
+}
+
+.badge-lg .dot{
+  width:10px !important;
+  height:10px !important;
+  margin-right:6px !important;
+}
+
+/* 停止時間ラベルを太字気味に */
+.badge-danger,
+.badge-warn,
+.badge-good,
+.badge-info{
+  font-weight:600;
+}
+/* ==== タイトル：整理No / ライン名 ==== */
+.sn{
+  font-size:2.4rem;      /* ★ 2倍以上に拡大 */
+  font-weight:800;
+}
+
+.line-name{
+  font-size:2rem;        /* ★ ラインも大きめ */
+  font-weight:700;
+  color:#4b5563;
+  margin-left:12px;
+}
+
+/* ==== バッジ超大型化 ==== */
+.badge-lg{
+  font-size:1.6rem !important;     /* ★ ほぼ倍 */
+  padding:14px 20px !important;    /* ★ 厚みUP */
+  border-radius:16px !important;
+  margin-left:15px !important;
+  display:inline-flex;
+  align-items:center;
+}
+
+.badge-lg .dot{
+  width:14px !important;
+  height:14px !important;
+  margin-right:10px !important;
+}
+
+/* 停止時間・再発の文字をさらに太く */
+.badge-danger,
+.badge-warn,
+.badge-good,
+.badge-info{
+  font-weight:700;
+}
+/* ==== タイトル：整理No & ライン名（完全統一） ==== */
+.detail-title-main{
+  font-size:2.6rem;        /* ← 好きなサイズに調整可（今は大きめ2.6rem） */
+  font-weight:800;
+  color:#000;  
+  display:flex;
+  align-items:center;
+  gap:12px;
+}
+
+.detail-title-main .line{
+  font-size:inherit;       /* ← 整理No と完全同一サイズ */
+  font-weight:inherit;     /* ← 同じ太さ */
+  color:#000;  
 }
 
 </style>
@@ -2022,11 +2102,22 @@ function reorderColumns(fromId, toId){
     const body  = document.getElementById('detailBody');
 
     // タイトル（上部）
-    title.innerHTML = `
-      <span class="sn">整理No: ${snText}</span>
-      <span class="badge ${stopBadgeCls}"><span class="dot"></span>${stopBadgeLbl}</span>
-      <span class="badge ${recBadgeCls}"><span class="dot"></span>${recBadgeLbl}</span>
-    `;
+title.innerHTML = `
+  <div class="detail-title-main">
+    <span>整理No: ${snText}</span>
+    <span class="line">（${item.lineName || '-'}）</span>
+  </div>
+
+  <span class="badge badge-lg ${stopBadgeCls}">
+    <span class="dot"></span>${stopBadgeLbl}
+  </span>
+
+  <span class="badge badge-lg ${recBadgeCls}">
+    <span class="dot"></span>${recBadgeLbl}
+  </span>
+`;
+
+
 
     const mfg  = item.mfgPhotoUrls  || [];
     const tech = item.techPhotoUrls || [];
@@ -2037,7 +2128,7 @@ function reorderColumns(fromId, toId){
       if (productUrl) {
         productSection = `
           <div class="detail-section">
-            <div class="section-title">🏷️ 製品写真（整理No連動）</div>
+            <div class="section-title">🏷️ 製品写真</div>
             <div class="photo-grid">
               <div class="photo-thumbnail" onclick="window.open('${productUrl}', '_blank')">
                 <img src="${productUrl}" alt="製品写真（整理No: ${snText})">
