--- a/dateview.html
+++ b/dateview.html
@@ -588,6 +588,17 @@ body.fullscreen-active {
   font-weight:inherit;     /* ← 同じ太さ */
   color:#000;  
 }
+/* ==== 製品写真を1.5倍に拡大 ==== */
+.photo-grid .product-photo img{
+  transform: scale(1.0);         /* ★ 1.5倍表示 */
+  transform-origin: top left;    /* 左上基準で拡大 */
+}
+
+/* 周りの枠のサイズも調整（画像がはみ出さないように） */
+.photo-grid .product-photo{
+  width: calc(225px * 1.0);   /* 元の幅 × 1.5 */
+  height: calc(225px * 1.0);  /* 元の高さ × 1.5 */
+}
 
 </style>
 </head>
@@ -2130,7 +2141,7 @@ title.innerHTML = `
           <div class="detail-section">
             <div class="section-title">🏷️ 製品写真</div>
             <div class="photo-grid">
-              <div class="photo-thumbnail" onclick="window.open('${productUrl}', '_blank')">
+              <div class="photo-thumbnail product-photo" onclick="window.open('${productUrl}', '_blank')">
                 <img src="${productUrl}" alt="製品写真（整理No: ${snText})">
               </div>
             </div>
