--- a/dateview.html
+++ b/dateview.html
@@ -1943,7 +1943,7 @@ const columns = visibleColumns
               v = item.restartTimeNorm || '-';
 
             } else if (col.id==='status') {
-              const statusText = (item.status==='complete') ? '完了' : '技術入力待ち';
+              const statusText = (item.status==='complete') ? '完了' : '対応部署入力待ち';
               const statusCls  = (item.status==='complete') ? 'status-complete' : 'status-pending';
               v = `<span class="status-badge ${statusCls}">${statusText}</span>`;
 
@@ -2067,7 +2067,7 @@ function reorderColumns(fromId, toId){
         if(col.id==='occurrenceDate') v=it.occurrenceDateISO || it.createdAtISO || '';
         else if(col.id==='occurrenceTime') v=it.occurrenceTimeNorm||'';
         else if(col.id==='restartTime') v=it.restartTimeNorm||'';
-        else if(col.id==='status') v=(it.status==='complete'?'完了':'技術入力待ち');
+        else if(col.id==='status') v=(it.status==='complete'?'完了':'対応部署入力待ち');
         else if(col.id==='stopMinutes' && it.stopMinutes!=null) v=it.stopMinutes;
         return `"${String(v).replace(/"/g,'""')}"`;
       });
@@ -2241,7 +2241,7 @@ title.innerHTML = `
                 <div class="detail-label">状態</div>
                 <div class="detail-value">
                   <span class="status-badge ${item.status === 'complete' ? 'status-complete' : 'status-pending'}">
-                    ${item.status === 'complete' ? '完了' : '技術入力待ち'}
+                    ${item.status === 'complete' ? '完了' : '対応部署入力待ち'}
                   </span>
                 </div>
               </div>
