--- a/dateview.html
+++ b/dateview.html
@@ -910,6 +910,7 @@ function getProductPhotoUrl(serialNoRaw){
     { id:'anomalyContent', label:'異常内容', sortable:false },
     { id:'actionTaken', label:'対応内容', sortable:false },
     { id:'rootCauseAction', label:'処置内容', sortable:false },
+    { id:'qualityResponse', label:'品質対応', sortable:false }, 
     { id:'photos', label:'写真', sortable:false },
     { id:'status', label:'状態', sortable:true },
     { id:'recurrenceType', label:'新規/再発', sortable:true },
@@ -2262,6 +2263,11 @@ title.innerHTML = `
             <div class="section-title">🛠️ 処置内容</div>
             <div class="detail-text-area">${item.rootCauseAction || '-'}</div>
           </div>
+                   <div class="detail-section">
+  <div class="section-title">🧪 品質対応</div>
+  <div class="detail-text-area">${item.qualityResponse || '-'}</div>
+</div>
+
         </div>
 
         <!-- 右カラム：写真パネル一式 -->
