--- a/abnreports.html
+++ b/abnreports.html
@@ -484,6 +484,12 @@
 <div class="form-group"><label>遡り *</label>
   <input type="text" id="traceback" required placeholder="例: 300個廃却　品質判断より生産分流動 など">
 </div>
+
+         <div class="form-group">
+  <label>LotNo</label>
+  <input type="text" id="lotNo" placeholder="例: M501">
+</div>
+         
 <!-- 品質対応 -->
 <div class="form-group">
   <label>品質対応</label>
@@ -2184,6 +2190,7 @@ const base = {
   department: document.getElementById('department').value,
   lineName: document.getElementById('lineName').value,
   serialNo: document.getElementById('serialNo').value,
+ lotNo: document.getElementById('lotNo').value || '',
   occurrenceDate: document.getElementById('occurrenceDate').value,
   occurrenceTime: document.getElementById('occurrenceTime').value || '',
   restartTime: document.getElementById('restartTime').value || '',
@@ -2450,6 +2457,13 @@ function renderHistory(){
               <div class="card-meta-label">発生日時</div>
               <div class="card-meta-value">${item.occurrenceDate||''} ${item.occurrenceTime||''}</div>
             </div>
+            ${item.lotNo ? `
+  <div class="card-meta-item">
+    <div class="card-meta-label">LotNo</div>
+    <div class="card-meta-value">${item.lotNo}</div>
+  </div>
+` : ''}
+
             ${item.restartTime ? `
               <div class="card-meta-item">
                 <div class="card-meta-label">再開時刻</div>
