--- a/dateview.html
+++ b/dateview.html
@@ -908,6 +908,7 @@ function getProductPhotoUrl(serialNoRaw){
     { id:'stopMinutes', label:'停止時間', sortable:true },
     { id:'handler', label:'処置者', sortable:true },
     { id:'anomalyContent', label:'異常内容', sortable:false },
+    { id:'lotNo', label:'ロット', sortable:true },
     { id:'actionTaken', label:'対応内容', sortable:false },
     { id:'rootCauseAction', label:'処置内容', sortable:false },
     { id:'qualityResponse', label:'品質対応', sortable:false }, 
@@ -1157,6 +1158,8 @@ function convertAnomalyDoc(doc){
     occurrenceTimeNorm:   occTime,
     restartTimeNorm:      resTime,
     stopMinutes: (typeof raw.stopMinutes === 'number') ? raw.stopMinutes : stop
+    lotNo: (raw.lotNo || raw.lotno || '').trim(),
+
   };
 }
 
@@ -2253,7 +2256,10 @@ title.innerHTML = `
             <div class="section-title">🚨 異常内容</div>
             <div class="detail-text-area">${item.anomalyContent || '-'}</div>
           </div>
-
+    <div class="detail-item">
+      <div class="detail-label">ロット</div>
+      <div class="detail-value">${item.lotNo || '-'}</div>
+    </div>
           <div class="detail-section">
             <div class="section-title">🔧 対応内容</div>
             <div class="detail-text-area">${item.actionTaken || '-'}</div>
