--- a/dateview.html
+++ b/dateview.html
@@ -1157,11 +1157,16 @@ function convertAnomalyDoc(doc){
     createdAtValue:       created.value,
     occurrenceTimeNorm:   occTime,
     restartTimeNorm:      resTime,
-    stopMinutes: (typeof raw.stopMinutes === 'number') ? raw.stopMinutes : stop
-    lotNo: (raw.lotNo || raw.lotno || '').trim(),
+    stopMinutes: (typeof raw.stopMinutes === 'number') ? raw.stopMinutes : stop,
 
+    // ★ ここから追加項目
+    qualityResponse: raw.qualityResponse || '',
+
+    // lotNo は候補を全部なめて最後に trim
+    lotNo: (raw.lotNo || raw.lotno || raw.lot || '').trim()
   };
 }
+
 
 let unsubscribeAnomalies = null;
 
