--- a/abnreports.html
+++ b/abnreports.html
@@ -765,7 +765,7 @@
           <summary style="cursor:pointer;font-weight:bold;color:#667eea;">対応ヘッダ（エクスポートと同じ）</summary>
           <div style="font-size:.9rem;color:#333;margin-top:8px;line-height:1.6;">
             必須: 整理No, 部署, 発生日, 異常内容, 現場対応<br>
-            任意: ライン名, 発生時刻, 再開時刻, 遡り, 処置者, 技術対応, 対応部署_処置者, 発見タイミング, 前回終物確認, 命数有無, 命数到達, 保全単位, 処置方法, 再発新規, 暫定, 状態, _id, 停止時間(分)
+            任意: ライン名, 発生時刻, 再開時刻, 遡り, 処置者, , 対応部署_処置者, 発見タイミング, 前回終物確認, 命数有無, 命数到達, 保全単位, 処置方法, 再発新規, 暫定, 状態, _id, 停止時間(分)
           </div>
         </details>
 
@@ -823,7 +823,7 @@ window.openSharePreview = function(id){
 【LotNo】
 ${item.lotNo || ''}
 
-【技術対応】
+【処置内容】
 ${item.rootCauseAction || '（未入力）'}
 
 【写真URL】
@@ -1039,7 +1039,7 @@ let editTechPhotos = [];
 対応: ${item.actionTaken}
 遡り: ${item.traceback || ''}
 
-【技術対応】
+【処置内容】
 ${item.rootCauseAction || '（未入力）'}
 
 【LotNo】
@@ -1068,7 +1068,7 @@ window.shareToLine = function(id){
 対応: ${item.actionTaken}
 遡り: ${item.traceback || ''}
 
-【技術対応】
+【処置内容】
 ${item.rootCauseAction || '（未入力）'}
 
 【LotNo】
