--- a/abnreports.html
+++ b/abnreports.html
@@ -3068,7 +3068,7 @@ const editModalHtml = `
       </div>
       <div class="form-group"><label>保全単位</label><input type="text" id="edit_maintenanceUnit"></div>
       <div class="form-group"><label>何が悪くどうした</label><textarea id="edit_rootCauseAction"></textarea></div>
-      <div class="form-group"><label>再発か新規か</label><select id="edit_recurrenceType"><option value="">選択</option><option value="再発">再発</option><option value="新規">新規</option></select></div>
+      <div class="form-group"><label>再発か新規か</label><select id="edit_recurrenceType"><option value="">選択</option><option value="再発">再発</option><option value="新規">新規</option><option value="調節">調節</option></select></div>
       <div class="form-group" id="edit_measureStatusGroup" style="display:none;">
         <label>対策状況（再発の場合）</label>
         <textarea id="edit_measureStatus"></textarea>
