--- a/dateview.html
+++ b/dateview.html
@@ -1936,16 +1936,26 @@ const columns = visibleColumns
               v = item.occurrenceTimeNorm || '-';
 
 } else if (col.id === 'recurrenceType') {
-  // 「新規 / 再発」バッジ表示
   const recRaw = (item.recurrenceType ?? item.recurrence ?? (item.isRepeat ? '再発' : '新規')) || null;
-  const isRepeat = typeof recRaw === 'string'
-    ? /再発|repeat/i.test(recRaw)
-    : !!recRaw;
+  const rec = typeof recRaw === 'string' ? recRaw.trim() : '';
 
-  const cls  = isRepeat ? 'badge-danger' : 'badge-info';
-  const text = isRepeat ? '再発' : '新規';
+  let cls  = 'badge-info';
+  let text = '新規';
 
-  v = `<span class="badge badge-compact ${cls}"><span class="dot"></span>${text}</span>`;
+  if (rec === '再発') {
+    cls  = 'badge-danger';
+    text = '再発';
+  } else if (rec === '調節') {
+    cls  = 'badge-warn';
+    text = '調節';
+  } else {
+    cls  = 'badge-info';
+    text = '新規';
+  }
+
+  v = `<span class="badge badge-compact ${cls}">
+         <span class="dot"></span>${text}
+       </span>`;
 
               
             } else if (col.id==='restartTime') {
@@ -2112,10 +2122,20 @@ function reorderColumns(fromId, toId){
     }
 
     // 新規 / 再発
-    const recRaw = (item.recurrenceType ?? item.recurrence ?? (item.isRepeat ? '再発' : '新規')) || null;
-    const isRepeat    = (typeof recRaw === 'string') ? /再発|repeat/i.test(recRaw) : !!recRaw;
-    const recBadgeCls = isRepeat ? 'badge-danger' : 'badge-info';
-    const recBadgeLbl = isRepeat ? '再発' : '新規';
+const recRaw = (item.recurrenceType ?? item.recurrence ?? (item.isRepeat ? '再発' : '新規')) || null;
+const rec = typeof recRaw === 'string' ? recRaw.trim() : '';
+
+let recBadgeCls = 'badge-info';
+let recBadgeLbl = '新規';
+
+if (rec === '再発') {
+  recBadgeCls = 'badge-danger';
+  recBadgeLbl = '再発';
+} else if (rec === '調節') {
+  recBadgeCls = 'badge-warn';
+  recBadgeLbl = '調節';
+}
+
 
     const modal = document.getElementById('detailModal');
     const title = document.getElementById('detailTitle');
