--- a/dateview.html
+++ b/dateview.html
@@ -1158,6 +1158,7 @@ function convertAnomalyDoc(doc){
     occurrenceTimeNorm:   occTime,
     restartTimeNorm:      resTime,
     stopMinutes: (typeof raw.stopMinutes === 'number') ? raw.stopMinutes : stop,
+measureStatus: (raw.measureStatus || raw.measure_status || raw.statusMeasure || '').trim(),
 
     // ★ ここから追加項目
     qualityResponse: raw.qualityResponse || '',
@@ -2298,7 +2299,10 @@ title.innerHTML = `
   <div class="section-title">🧪 品質対応</div>
   <div class="detail-text-area">${item.qualityResponse || '-'}</div>
 </div>
-
+<div class="detail-section">
+  <div class="section-title">📌 対策状況</div>
+  <div class="detail-text-area">${item.measureStatus || '-'}</div>
+</div>
         </div>
 
         <!-- 右カラム：写真パネル一式 -->
