--- a/chokotei_report.html
+++ b/chokotei_report.html
@@ -331,6 +331,7 @@
     <div class="container">
         <div class="header">
             <h1>⚡ チョコ停記録アプリ</h1>
+            <p>設備異常の即時記録・可視化システム</p>
         </div>
 
         <div class="nav-tabs">
@@ -518,7 +519,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
     
     <!-- Chart.js -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
+    <script src="https://unpkg.com/chart.js@3.9.1/dist/chart.min.js"></script>
 
     <script>
         // Firebase設定（ユーザー自身のFirebase設定に置き換えてください）
