--- a/chokotei_report.html
+++ b/chokotei_report.html
@@ -442,6 +442,8 @@
                                         <th style="padding: 10px; border-bottom: 2px solid #ddd;">日時</th>
                                         <th style="padding: 10px; border-bottom: 2px solid #ddd;">異常名</th>
                                         <th style="padding: 10px; border-bottom: 2px solid #ddd;">整理No</th>
+                                        <!-- ここでオプション列を追加 -->
+                                        <th style="padding: 10px; border-bottom: 2px solid #ddd;">オプション項目</th>
                                         <th style="padding: 10px; border-bottom: 2px solid #ddd;">処置者</th>
                                     </tr>
                                 </thead>
@@ -736,7 +738,7 @@
             selectedOrganizationNo = no;
         }
 
-        // 異常ごとのオプション項目を読み込み
+        // 異常ごとのオプション項目を読み込み（入力画面）
         function loadOptionalFields(equipmentId, anomalyId) {
             const container = document.getElementById('optional-fields-container');
             const section = document.getElementById('optional-fields-section');
@@ -1088,17 +1090,26 @@
                 tbody.innerHTML = '';
                 
                 if (records.length === 0) {
-                    tbody.innerHTML = '<tr><td colspan="4" style="padding: 20px; text-align: center; color: #999;">該当するデータがありません</td></tr>';
+                    tbody.innerHTML = '<tr><td colspan="5" style="padding: 20px; text-align: center; color: #999;">該当するデータがありません</td></tr>';
                     return;
                 }
                 
                 records.forEach(record => {
+                    // optionalData を表示用文字列に変換
+                    let optionalText = '-';
+                    if (record.optionalData && Object.keys(record.optionalData).length > 0) {
+                        optionalText = Object.entries(record.optionalData)
+                            .map(([key, value]) => `${value}`)
+                            .join(' / ');
+                    }
+
                     const row = document.createElement('tr');
                     row.style.borderBottom = '1px solid #eee';
                     row.innerHTML = `
                         <td style="padding: 10px;">${record.date} ${record.time}</td>
                         <td style="padding: 10px;">${record.anomalyName}</td>
                         <td style="padding: 10px;">${record.organizationNo || '-'}</td>
+                        <td style="padding: 10px;">${optionalText}</td>
                         <td style="padding: 10px;">${record.operator}</td>
                     `;
                     tbody.appendChild(row);
